force-app/main/default/objects/Integration_Auth_Profile__c/Integration_Auth_Profile__c.object-meta.xml
<CustomObject>
    <label>Integration Auth Profile</label>
    <nameField>
        <displayFormat>INT-AUTH-{0000}</displayFormat>
        <label>Integration Auth Profile Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Integration Auth Profiles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>