force-app/main/default/objects/Integration_Auth_Profile__c/fields/API_Key__c.field-meta.xml
<CustomField>
    <fullName>API_Key__c</fullName>
    <description>SENSITIVE: API key value. This field contains sensitive data and should be treated as encrypted.</description>
    <label>API Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>