force-app/main/default/objects/Integration_Auth_Profile__c/fields/Auth_Header_Name__c.field-meta.xml
<CustomField>
    <fullName>Auth_Header_Name__c</fullName>
    <defaultValue>&quot;Authorization&quot;</defaultValue>
    <description>Header name for API key authentication</description>
    <label>Auth Header Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>