force-app/main/default/objects/Integration_Auth_Profile__c/fields/Auth_Token_Prefix__c.field-meta.xml
<CustomField>
    <fullName>Auth_Token_Prefix__c</fullName>
    <description>Token prefix such as Bearer or Basic</description>
    <label>Auth Token Prefix</label>
    <length>100</length>
    <type>Text</type>
</CustomField>