force-app/main/default/objects/Integration_Auth_Profile__c/fields/Auth_Type__c.field-meta.xml
<CustomField>
    <fullName>Auth_Type__c</fullName>
    <label>Auth Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Named_Credential</fullName>
            </value>
            <value>
                <fullName>OAuth_2_0</fullName>
            </value>
            <value>
                <fullName>API_Key</fullName>
            </value>
            <value>
                <fullName>Basic_Auth</fullName>
            </value>
            <value>
                <fullName>HMAC</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>