force-app/main/default/objects/Integration_Auth_Profile__c/fields/HMAC_Algorithm__c.field-meta.xml
<CustomField>
    <fullName>HMAC_Algorithm__c</fullName>
    <label>HMAC Algorithm</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HmacSHA1</fullName>
            </value>
            <value>
                <fullName>HmacSHA256</fullName>
            </value>
            <value>
                <fullName>HmacSHA512</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>