force-app/main/default/objects/Integration_Auth_Profile__c/fields/HMAC_Header_Name__c.field-meta.xml
<CustomField>
    <fullName>HMAC_Header_Name__c</fullName>
    <description>Header name for HMAC signature</description>
    <label>HMAC Header Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>