force-app/main/default/objects/Integration_Auth_Profile__c/fields/HMAC_Secret__c.field-meta.xml
<CustomField>
    <fullName>HMAC_Secret__c</fullName>
    <description>SENSITIVE: HMAC secret key. This field contains sensitive data and should be treated as encrypted.</description>
    <label>HMAC Secret</label>
    <length>255</length>
    <type>Text</type>
</CustomField>