force-app/main/default/objects/Integration_Auth_Profile__c/fields/OAuth_Client_Id__c.field-meta.xml
<CustomField>
    <fullName>OAuth_Client_Id__c</fullName>
    <description>OAuth client identifier</description>
    <label>OAuth Client Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>