force-app/main/default/objects/Integration_Auth_Profile__c/fields/OAuth_Client_Secret__c.field-meta.xml
<CustomField>
    <fullName>OAuth_Client_Secret__c</fullName>
    <description>SENSITIVE: OAuth client secret. This field contains sensitive data and should be treated as encrypted.</description>
    <label>OAuth Client Secret</label>
    <length>255</length>
    <type>Text</type>
</CustomField>