force-app/main/default/objects/Integration_Auth_Profile__c/fields/OAuth_Grant_Type__c.field-meta.xml
<CustomField>
    <fullName>OAuth_Grant_Type__c</fullName>
    <label>OAuth Grant Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>client_credentials</fullName>
            </value>
            <value>
                <fullName>authorization_code</fullName>
            </value>
            <value>
                <fullName>password</fullName>
            </value>
            <value>
                <fullName>refresh_token</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>