force-app/main/default/objects/Integration_Auth_Profile__c/fields/OAuth_Scope__c.field-meta.xml
<CustomField>
    <fullName>OAuth_Scope__c</fullName>
    <description>OAuth scope for token requests</description>
    <label>OAuth Scope</label>
    <length>255</length>
    <type>Text</type>
</CustomField>