force-app/main/default/objects/Integration_Auth_Profile__c/fields/OAuth_Token_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>OAuth_Token_Endpoint__c</fullName>
    <description>Token endpoint URL for OAuth authentication</description>
    <label>OAuth Token Endpoint</label>
    <type>Url</type>
</CustomField>