force-app/main/default/objects/Integration_Auth_Profile__c/fields/Password__c.field-meta.xml
<CustomField>
    <fullName>Password__c</fullName>
    <description>SENSITIVE: Password for Basic authentication. This field contains sensitive data and should be treated as encrypted.</description>
    <label>Password</label>
    <length>255</length>
    <type>Text</type>
</CustomField>