force-app/main/default/objects/Integration_Auth_Profile__c/fields/Token_Cache_Duration__c.field-meta.xml
<CustomField>
    <fullName>Token_Cache_Duration__c</fullName>
    <description>Duration in seconds to cache authentication tokens</description>
    <label>Token Cache Duration</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>