force-app/main/default/objects/Integration_Auth_Profile__c/fields/Username__c.field-meta.xml
<CustomField>
    <fullName>Username__c</fullName>
    <description>Username for Basic authentication</description>
    <label>Username</label>
    <length>255</length>
    <type>Text</type>
</CustomField>